--- a/public/style.css
+++ b/public/style.css
@@ -141,3 +141,27 @@ a:focus {
   width: 100%;
   height: 30px;
 }
+
+
+.searchBar .searchButton {
+  height: 100%;
+  width: 120px;
+  height: 52px;
+  background-color: #231f20;
+  font-weight: bold;
+  z-index: 1;
+  outline-offset: 3px;
+  letter-spacing: 0.3px;
+  font-size: .875rem;
+  color: #fff;
+}
+
+.searchBar .searchButton:hover, .shadow-hover {
+  cursor: pointer;
+}
+
+header {
+  box-shadow: 0 4px 13px -3px rgb(0 0 0 / 10%);
+  border-bottom: 1px solid #d2d2d2;
+  margin-bottom: 30px;
+}
