--- a/public/style.css
+++ b/public/style.css
@@ -209,6 +209,8 @@ nav a {
   top: 55px;
   background-color: #fff;
 
+  z-index: 10;
+
   box-shadow: 9px 10px 49px -8px rgba(0,0,0,0.75);
   -webkit-box-shadow: 9px 10px 49px -8px rgba(0,0,0,0.75);
   -moz-box-shadow: 9px 10px 49px -8px rgba(0,0,0,0.75);
