--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,11 @@ html {
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-size: 18px;
+  letter-spacing: 0.1px;
+  line-height: 1.6;
 }
 
 /* div {
@@ -189,6 +193,7 @@ nav a {
   color: #000;
   letter-spacing: 0.012em;
   font-weight: bold;
+  font-size: .875rem;
 }
 
 .downloadLink {
